--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -7,50 +7,15 @@
   font-style: #{$style};
   }
 }
+//
 @import "fonts";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Nunito+Sans&display=swap');
 @import "scss/fontawesome.scss";
 @import "scss/solid.scss";
 
-* {
- margin: 0;
- padding: 0;
- box-sizing: border-box;
- font-family: 'Nunito Sans' ;
-}
-div {
-  margin: 0;
-  padding: 0;
-}
-html, body {
-  // height: 100vh;
-  max-width: 100%;
-  width: 100%;
-  // overflow-x: hidden;
-}
-a {
-  text-decoration: none;
-  display: inline-block;
-}
-button {
-  cursor: pointer;
-  border: none;
-}
-li {
- list-style-type: none;
- * {
-   color:  inherit;
- }
-}
 //
-
-$maxWidth: 1350;
-@mixin adaptiv-font($pcSize) {
- $mobSize: 0.8 * $pcSize;
- $addSize: $pcSize - $mobSize;
- $maxWidth: $maxWidth - 320;
- font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
-}
+$maxWidth: 1350;//рекомендованая ширина экрана
+$fontCompressionRatio: 0.8;//коэффицент сжатия шрифта
 //
 $blue: #4276d7;
 $black: #373F41;
@@ -59,345 +24,18 @@ $white:  #d6dfdf;
 $whiteGrey: #869094;
 $disabledBtn : #cee4ee;
 //
-h1, h2, h3, h4, h5, h6  {
-  font-family: Mulish;
-  line-height: 53px;
-  letter-spacing: 0.2px;
-}
-h1 {
-  @include adaptiv-font(44);
-}
-h2 {
-  @include adaptiv-font(28);
-
-}
-h3 {
-  @include adaptiv-font(19);
-}
-p {
-  @include adaptiv-font(16);
-  line-height: 22px;
-  letter-spacing: 0.3px;
-}
-// preloader
-.preloader--overlay {
-  position: fixed;
-  left: 0;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background: white;
-  z-index: 9998;
-  transition: 1s all;
-  opacity: 1;
-  visibility: visible;
-  &.done {
-      opacity: 0;
-      visibility:  hidden;
-  }
-}
-.preloader {
-  z-index: 9999;
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  animation: spin 0.9s cubic-bezier(0,.67,.88,.33) infinite ;
-}
-@keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-}
-.loaded_hiding .preloader {
-  transition: 0.3s opacity;
-  opacity: 0;
+@mixin adaptiv-font($pcSize) {
+ $mobSize: $fontCompressionRatio * $pcSize;
+ $addSize: $pcSize - $mobSize;
+ $maxWidth: $maxWidth - 320;
+ font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
 }
 
-.loaded .preloader {
-  display: none;
-}
-////
-.container {
-  width: 100%;
-  height: 100%;
-  padding: 0 13%;
-}
-.logo {
-  font-style: italic;
-  left: 0px;
-  font-family: Lato;
-  font-weight: bold;
-  letter-spacing: 0.2px;
-  color: $blue;
-  @include adaptiv-font(21);
-}
-.button {
-  width: 83px;
-  height: 42px;
-  background: $blue;
-  border-radius: 5px;
-  color: #fff;
-}
-nav {
-  height: 40px;
-  position: relative;
-  .container {
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  .logo {
-    flex: 1 1 auto;
-    @include adaptiv-font(26);
-  }
-  .nav__content {
-    height: 40px;
-    width: 100%;
-  }
-  .nav__item {
-    margin: 0 2%;
-    line-height: 18px;
-    letter-spacing: 0.2px;
-    color: $black;
-    // @include adaptiv-font(16);
-    transition: 0.5s;
-    &:hover {
-      color: $blue;
-    }
-  }
-  .nav__item__hover {
-    color: $blue;
-  }
-}
-
-main {
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(to bottom, transparent 70%, $black),  url(../img/main/math.png) no-repeat fixed;
-  background-size: cover;
-  position: relative;
-  z-index: 1;
-  &::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0,0,0,.6);
-    width: 100%;
-    z-index: 2;
-  }
-  .container {
-    display: flex;
-    align-items: center;
-    .main__header {
-      max-width: clamp(400px, 40%, 45%);
-      z-index: 10;
-      h1 {
-        color: $white;
-        margin: 0 0 4% 0;
-      }
-      p {
-        color: $whiteGrey;
-      }
-    }
-  }
-}
-.difficulty {
-  margin: 8% 0;
-  text-align: center;
-  .container {
-    display: flex;
-    @media (max-width: 1200px) {
-      flex-direction: column;
-      .difficulty__item {
-        margin: 3% 0;
-      }
-    }
-    .difficulty__item {
-      flex-basis: 33.333%;
-      justify-content: space-between;
-      p {
-        @include adaptiv-font(12);
-        line-height: 1.6;
-        &:last-of-type{
-          margin: 0 0 2.5% 0;
-        }
-      }
-      img {
-        width: 40px;
-        height: 40px;
-        transition: 0.4s;
-      }
-      &:hover {
-        img {
-          transform: translate(0, -17%);
-        }
-      }
-      a {
-        color: $grey;
-      }
-      a:hover {
-        color: $blue
-      }
-    }
-  }
-}
-.pueChart {
-  width: 100%;
-  .container {
-    display: flex;
-    justify-content: space-between;
-    @media (max-width: 800px) {
-      flex-wrap: wrap;
-      justify-content: center;
-      .pueChart__pueChar {
-        height: 400px !important;
-      }
-    }
-    .pueChart__title {
-      max-width: 30%;
-      @media (max-width: 800px) {
-        max-width: 100%;
-      }
-      h2 {
-        display: block;
-        line-height: 2.5rem;
-        margin: 0 0 0.5rem;
-        @include adaptiv-font(32);
-      }
-      small {
-        display: block;
-        color: $grey;
-        @include adaptiv-font(16);
-      }
-      //button
-      button {
-        margin: 6% 0 0 0;
-        float: right;
-        width: 130px;
-        height: 40px;
-        background: $disabledBtn;
-        border-radius: 5px;
-        // padding: 10px 25px;
-        position: relative;
-        display: inline-block;
-        @include adaptiv-font(16);
-        transition:  0.3s;
-        z-index: 1;
-
-        a {
-          display: block;
-          width: 100%;
-          height: 100%;
-          color: #fff;
-          //
-          display: flex;
-          justify-content: center;
-          align-items:  center;
-        }
-      }
-      button:after {
-        content: "";
-        position: absolute;
-        width: 0;
-        height: 100%;
-        top: 0;
-        right: 0;
-        background-color: $blue;
-        border-radius: 5px;
-        box-shadow: 0px 5px 29px 2px rgba(34, 60, 80, 0.26);
-        transition:  0.3s;
-        z-index: -1;
-
-      }
-
-      button:hover:after {
-        left: 0;
-        width: 100%;
-      }
-    }
-  }
-}
-.opportunities{
-  padding: 5% 0;
-  width: 100%;
-  height: auto;
-  .container {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    @media (max-width: 1200px) {
-      flex-wrap: wrap;
-    }
-    .opportunities__item {
-      display: block;
-      margin: 0 5%;
-      flex-basis: 25%;
-      @media (max-width: 1200px) {
-        margin:  3% 10%;
-        max-width: 30%;
-        flex-basis: 50%;
-      }
-      img {
-        transition: 0.4s;
-        width: 40px;
-        height: 40px;
-      }
-      &:hover {
-        img {
-          transform: translate(0, -17%);
-        }
-      }
-    }
-  }
-}
-footer {
-
-  padding: 2% 0;
-  min-height: 10vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: $black;
-  color: $whiteGrey;
-  @include adaptiv-font(14);
-  .footer__item {
-     white-space: nowrap;
-     text-align: center;
-    h4 {
-      font-family: Mulish;
-      font-style: normal;
-      font-weight: 300;
-      line-height: 16px;
-    }
-    p {
-      @include adaptiv-font(12);
-    }
-    a {
-      margin: 0 3%;
-      color: $whiteGrey;
-      transition: 0.5s;
-      &:hover {
-        color: $white;
-      }
-    }
-  }
-}
 //
+@import "null";
+@import 'general';
 @import 'burger';
+//pages
+@import "index";
 @import 'difficulties';
 @import "theoreticalMaterial";
-//
