--- a/css/style.css
+++ b/css/style.css
@@ -7081,8 +7081,10 @@ div {
 
 html,
 body {
-  max-width: 100%;
+  height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -7285,6 +7287,62 @@ nav .nav__item:hover {
 
 nav .nav__item__hover {
   color: #4276d7;
+}
+
+.content {
+  display: table;
+}
+
+.MJX_HoverRegion,
+.MJX_ToolTip {
+  background: #373F41 !important;
+}
+
+footer {
+  display: table-row;
+  margin-bottom: -4%;
+  min-height: 10%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #373F41;
+  color: #869094;
+  font-size: calc(11.2px + 2.8 * ((100vw - 320px) / 1030));
+}
+
+footer .footer__item {
+  white-space: nowrap;
+  text-align: center;
+}
+
+footer .footer__item h4 {
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 16px;
+}
+
+footer .footer__item p {
+  font-size: calc(9.6px + 2.4 * ((100vw - 320px) / 1030));
+}
+
+footer .footer__item a {
+  margin: 0 3%;
+  color: #869094;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+
+footer .footer__item a:hover {
+  color: #d6dfdf;
 }
 
 .source {
@@ -7610,59 +7668,16 @@ main .container .main__header p {
           transform: translate(0, -17%);
 }
 
-footer {
-  padding: 2% 0;
-  min-height: 10vh;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: #373F41;
-  color: #869094;
-  font-size: calc(11.2px + 2.8 * ((100vw - 320px) / 1030));
-}
-
-footer .footer__item {
-  white-space: nowrap;
-  text-align: center;
-}
-
-footer .footer__item h4 {
-  font-family: Mulish;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 16px;
-}
-
-footer .footer__item p {
-  font-size: calc(9.6px + 2.4 * ((100vw - 320px) / 1030));
-}
-
-footer .footer__item a {
-  margin: 0 3%;
-  color: #869094;
-  -webkit-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
-}
-
-footer .footer__item a:hover {
-  color: #d6dfdf;
-}
-
 .formula {
   max-width: 100vw;
 }
 
 .content {
-  background: #fafafa;
+  height: 100%;
+  width: 100%;
+  margin: 0 0 5% 0;
   min-height: 250px;
+  background: #fafafa;
 }
 
 .content .checkbox__line {
